@@ -13,10 +13,10 @@
  */
 package io.trino.plugin.databricks;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import io.airlift.log.Logger;
 import io.trino.Session;
+import io.trino.plugin.jmx.JmxPlugin;
 import io.trino.plugin.tpch.TpchPlugin;
 import io.trino.testing.DistributedQueryRunner;
 import io.trino.testing.QueryRunner;
@@ -31,30 +31,24 @@ import static io.trino.plugin.tpch.TpchMetadata.TINY_SCHEMA_NAME;
 import static io.trino.testing.QueryAssertions.copyTpchTables;
 import static io.trino.testing.TestingSession.testSessionBuilder;
 
-public final class MySqlQueryRunner
+public final class PostgreSqlQueryRunner
 {
-    private MySqlQueryRunner() {}
+    private PostgreSqlQueryRunner() {}
 
     private static final String TPCH_SCHEMA = "tpch";
 
-    public static QueryRunner createMySqlQueryRunner(io.trino.plugin.databricks.TestingMySqlServer server, TpchTable<?>... tables)
-            throws Exception
-    {
-        return createMySqlQueryRunner(server, ImmutableMap.of(), ImmutableMap.of(), ImmutableList.copyOf(tables));
-    }
-
-    public static DistributedQueryRunner createMySqlQueryRunner(
-            TestingMySqlServer server,
+    public static DistributedQueryRunner createPostgreSqlQueryRunner(
+            TestingPostgreSqlServer server,
             Map<String, String> extraProperties,
             Map<String, String> connectorProperties,
             Iterable<TpchTable<?>> tables)
             throws Exception
     {
-        return createMySqlQueryRunner(server, extraProperties, ImmutableMap.of(), connectorProperties, tables, runner -> {});
+        return createPostgreSqlQueryRunner(server, extraProperties, Map.of(), connectorProperties, tables, runner -> {});
     }
 
-    public static DistributedQueryRunner createMySqlQueryRunner(
-            TestingMySqlServer server,
+    public static DistributedQueryRunner createPostgreSqlQueryRunner(
+            TestingPostgreSqlServer server,
             Map<String, String> extraProperties,
             Map<String, String> coordinatorProperties,
             Map<String, String> connectorProperties,
@@ -62,38 +56,42 @@ public final class MySqlQueryRunner
             Consumer<QueryRunner> moreSetup)
             throws Exception
     {
-        DistributedQueryRunner queryRunner = DistributedQueryRunner.builder(createSession())
-                .setExtraProperties(extraProperties)
-                .setCoordinatorProperties(coordinatorProperties)
-                .setAdditionalSetup(moreSetup)
-                .build();
+        DistributedQueryRunner queryRunner = null;
         try {
+            queryRunner = DistributedQueryRunner.builder(createSession())
+                    .setExtraProperties(extraProperties)
+                    .setCoordinatorProperties(coordinatorProperties)
+                    .setAdditionalSetup(moreSetup)
+                    .build();
+
             queryRunner.installPlugin(new TpchPlugin());
             queryRunner.createCatalog("tpch", "tpch");
 
             // note: additional copy via ImmutableList so that if fails on nulls
             connectorProperties = new HashMap<>(ImmutableMap.copyOf(connectorProperties));
             connectorProperties.putIfAbsent("connection-url", server.getJdbcUrl());
-            connectorProperties.putIfAbsent("connection-user", server.getUsername());
+            connectorProperties.putIfAbsent("connection-user", server.getUser());
             connectorProperties.putIfAbsent("connection-password", server.getPassword());
+            connectorProperties.putIfAbsent("postgresql.include-system-tables", "true");
+            //connectorProperties.putIfAbsent("postgresql.experimental.enable-string-pushdown-with-collate", "true");
 
             queryRunner.installPlugin(new DatabricksPlugin());
-            queryRunner.createCatalog("mysql", "mysql", connectorProperties);
+            queryRunner.createCatalog("postgresql", "postgresql", connectorProperties);
 
             copyTpchTables(queryRunner, "tpch", TINY_SCHEMA_NAME, createSession(), tables);
 
             return queryRunner;
         }
         catch (Throwable e) {
-            closeAllSuppress(e, queryRunner);
+            closeAllSuppress(e, queryRunner, server);
             throw e;
         }
     }
 
-    private static Session createSession()
+    public static Session createSession()
     {
         return testSessionBuilder()
-                .setCatalog("databricks")
+                .setCatalog("postgresql")
                 .setSchema(TPCH_SCHEMA)
                 .build();
     }
@@ -101,13 +99,16 @@ public final class MySqlQueryRunner
     public static void main(String[] args)
             throws Exception
     {
-        DistributedQueryRunner queryRunner = createMySqlQueryRunner(
-                new TestingMySqlServer(),
+        DistributedQueryRunner queryRunner = createPostgreSqlQueryRunner(
+                new TestingPostgreSqlServer(true),
                 ImmutableMap.of("http-server.http.port", "8080"),
                 ImmutableMap.of(),
                 TpchTable.getTables());
 
-        Logger log = Logger.get(MySqlQueryRunner.class);
+        queryRunner.installPlugin(new JmxPlugin());
+        queryRunner.createCatalog("jmx", "jmx");
+
+        Logger log = Logger.get(PostgreSqlQueryRunner.class);
         log.info("======== SERVER STARTED ========");
         log.info("\n====\n%s\n====", queryRunner.getCoordinator().getBaseUrl());
     }
